# bestia_dev_new_rust_wasm_pwa

./: .auto_version_from_date.json  Cargo.toml  README.md
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/bestia_dev_new_rust_wasm_pwa/: all.html  constant.__wasm_bindgen_generated_wasm_bindgen_start__const.html  fn.wasm_bindgen_start.html  index.html  sidebar-items.js  struct.PwaData.html
docs/bestia_dev_new_rust_wasm_pwa/dom_mod/: fn.inject_htm_into_dom.html  fn.load_all_from_local_storage.html  fn.on_file_change.html  fn.read_input_elements_and_save_to_local_storage.html  fn.start_function.html  index.html  sidebar-items.js
docs/bestia_dev_new_rust_wasm_pwa/prepare_zip_mod/: fn.add_automation_cargo_toml_to_zip.html  fn.add_automation_gitignore_to_zip.html  fn.add_automation_tasks_rs_main_to_zip.html  fn.add_cargo_toml_to_zip.html  fn.add_css_to_zip.html  fn.add_gitignore_to_zip.html  fn.add_index_html_to_zip.html  fn.add_license_to_zip.html  fn.add_manifest_json_to_zip.html  fn.add_readme_md_to_zip.html  fn.add_rust_yml_to_zip.html  fn.add_service_worker_js_to_zip.html  fn.add_src_dom_mod_to_zip.html  fn.add_src_lib_to_zip.html  fn.add_src_web_sys_mod_to_zip.html  fn.add_start_service_worker_js_to_zip.html  fn.add_vscode_settings_to_zip.html  fn.create_and_fill_zip.html  fn.create_new_zip.html  fn.decode_png.html  fn.encode_to_png.html  (+6 more)
src/: dom_mod.rs  lib.rs  prepare_zip_mod.rs  web_sys_mod.rs
web_server_folder/bestia_dev_new_rust_wasm_pwa/: index.html  manifest.json  service_worker.js
(+29 files in other folders)
