[package]
name = "bestia_dev_new_rust_wasm_pwa"
version = "2022.714.1538"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Creates a new Rust Wasm PWA project"
repository = "https://github.com/bestia-dev/bestia_dev_new_rust_wasm_pwa_game"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["learning"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
image = "0.24.2"
ico = "0.1.0"

[dependencies.zip]
version = "0.6.2"
default-features = false
features = ["deflate"]

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "Blob",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "File",
  "FileList",
  "FileReader",
  "Headers",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlHtmlElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "ProgressEvent",
  "Response",
  "Screen",
  "Storage",
  "Url",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
